--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>ThinkfulCupid - Free Online Dating</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" rel="stylesheet" type="text/css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
@@ -34,23 +34,23 @@
                 <form>
                     <div class="space">
                         <label for="email">Email</label>
-                        <input id="email" type="email" name="email" />
+                        <input id="email" type="email" name="email" placeholder="example@email.com" size="1" />
                     </div>
                     <div class="space">
                         <label for="password">Create a password</label>
-                        <input id="password" name="password" type="password" minlength="8" />
+                        <input id="password" name="password" type="password" minlength="8" size="1" />
                     </div>
                     <div class="space">
                         <label for="username">Username</label>
-                        <input id="username" name="username" type="text" maxlength="25" />
+                        <input id="username" name="username" type="text" maxlength="25" size="1" />
                     </div>
                     <div class="space">
                         <label for="gender">I am...</label>
                         <select id="gender" name="gender" size="1">
-                  <option value="female">female</option>
-                  <option value="male">male</option>
-                  <option value="non-binary">other</option>
-                </select>
+                <option value="female">female</option>
+                <option value="male">male</option>
+                <option value="non-binary">other</option>
+              </select>
                     </div>
                     <button type="button">Join</button>
                 </form>
@@ -60,7 +60,7 @@
         <!-- About -->
         <section id="about" class="alternate-background">
             <h2>About</h2>
-            <div id="aboutPage" class="group">
+            <div id="aboutPage" class="centerImage">
                 <div class="item">
                     <img src="images/sunset-with-heart.png" alt="ThinkfulCupid - Sunset with heart" class="aboutPic" />
                 </div>
@@ -78,7 +78,7 @@
         </section>
 
         <!-- Download -->
-        <section id="download" class="group">
+        <section id="download" class="centerImage">
             <div class="item position">
                 <h2>Download the App</h2>
                 <p>
@@ -89,7 +89,9 @@
                     <li>Mauris in pellentesque ligula.</li>
                     <li>Sed accumsan elit lacus, id ultrices libero rutrum vitae.</li>
                     <li>Nunc vitae ex eget neque pellentesque porttitor.</li>
-                    <li>Cras mollis lorem sagittis sapien imperdiet blandit. Vivamus.</li>
+                    <li>
+                        Cras mollis lorem sagittis sapien imperdiet blandit. Vivamus.
+                    </li>
                     <li>
                         Donec vehicula ipsum nisi, eu consectetur leo feugiat et. Fusce eget hendrerit mauris.
                     </li>
@@ -103,17 +105,18 @@
         <!-- Blog -->
         <section id="blog" class="alternate-background">
             <h2>Blog</h2>
-            <div id="bg1" class="group">
+            <div id="row1" class="group">
                 <div class="item">
-                    <img src="images/blog-post-1.png" alt="Thinkfulbnb - blog post 1" />
+                    <img class="blog-pic" src="images/blog-post-1.png" alt="Thinkfulbnb - blog post 1" />
                     <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit</h3>
+                    <br />
                     <p>
                         Sed vel scelerisque ex. Duis in pharetra neque, at tempus lorem. Aenean mi magna, posuere at quam sed, euismod gravida neque. Phasellus dolor quam, mattis at nibh sed, tincidunt malesuada turpis. Nam dictum dapibus neque, sed vehicula neque tristique
                         vestibulum.
                     </p>
                 </div>
                 <div class="item">
-                    <img src="images/blog-post-2.png" alt="Thinkfulbnb - blog post 2" />
+                    <img class="blog-pic" src="images/blog-post-2.png" alt="Thinkfulbnb - blog post 2" />
                     <h3>Mauris eget nisl quis metus ultrices venenatis</h3>
                     <p>
                         Sed vel scelerisque ex. Duis in pharetra neque, at tempus lorem. Aenean mi magna, posuere at quam sed, euismod gravida neque. Phasellus dolor quam, mattis at nibh sed, tincidunt malesuada turpis. Nam dictum dapibus neque, sed vehicula neque tristique
@@ -121,9 +124,10 @@
                     </p>
                 </div>
             </div>
-            <div id="bg2" class="group">
+
+            <div id="row2" class="group">
                 <div class="item">
-                    <img src="images/blog-post-3.png" alt="Thinkfulbnb - blog post 3" />
+                    <img class="blog-pic" src="images/blog-post-3.png" alt="Thinkfulbnb - blog post 3" />
                     <h3>
                         Fusce augue diam, sollicitudin at metus id, congue placerat neque
                     </h3>
@@ -133,7 +137,7 @@
                     </p>
                 </div>
                 <div class="item">
-                    <img src="images/blog-post-4.png" alt="Thinkfulbnb - blog post 4" />
+                    <img class="blog-pic" src="images/blog-post-4.png" alt="Thinkfulbnb - blog post 4" />
                     <h3>Aenean purus dui, aliquam vitae auctor vel</h3>
                     <p>
                         Sed vel scelerisque ex. Duis in pharetra neque, at tempus lorem. Aenean mi magna, posuere at quam sed, euismod gravida neque. Phasellus dolor quam, mattis at nibh sed, tincidunt malesuada turpis. Nam dictum dapibus neque, sed vehicula neque tristique
