fixed form for find match

--- a/index.html
+++ b/index.html
@@ -27,33 +27,37 @@
     <main>
         <!-- Join -->
         <section id="join">
-            <img src="images/love.png" alt="ThinkfulCupid - love" />
-            <!-- Join Form -->
             <div class="horicenter">
-                <h2>Find your perfect match</h2>
-                <form>
-                    <div class="space">
-                        <label for="email">Email</label>
-                        <input id="email" type="email" name="email" placeholder="example@email.com" size="1" />
-                    </div>
-                    <div class="space">
-                        <label for="password">Create a password</label>
-                        <input id="password" name="password" type="password" minlength="8" size="1" />
-                    </div>
-                    <div class="space">
-                        <label for="username">Username</label>
-                        <input id="username" name="username" type="text" maxlength="25" size="1" />
-                    </div>
-                    <div class="space">
-                        <label for="gender">I am...</label>
-                        <select id="gender" name="gender" size="1">
-                <option value="female">female</option>
-                <option value="male">male</option>
-                <option value="non-binary">other</option>
-              </select>
-                    </div>
-                    <button type="button">Join</button>
-                </form>
+                <div class="item-double">
+                    <img src="images/love.png" alt="ThinkfulCupid - love" />
+                </div>
+                <!-- Join Form -->
+                <div class="item joinform">
+                    <h2>Find your perfect match</h2>
+                    <form>
+                        <div class="space">
+                            <label for="email">Email</label>
+                            <input id="email" type="email" name="email" placeholder="example@email.com" size="1" />
+                        </div>
+                        <div class="space">
+                            <label for="password">Create a password</label>
+                            <input id="password" name="password" type="password" minlength="8" size="1" />
+                        </div>
+                        <div class="space">
+                            <label for="username">Username</label>
+                            <input id="username" name="username" type="text" maxlength="25" size="1" />
+                        </div>
+                        <div class="space">
+                            <label for="gender">I am...</label>
+                            <select id="gender" name="gender" size="1">
+                                <option value="female">female</option>
+                                <option value="male">male</option>
+                                <option value="non-binary">other</option>
+                            </select>
+                        </div>
+                        <button type="button">Join</button>
+                    </form>
+                </div>
             </div>
         </section>
 
